fix spacing

--- a/taskbird-app/src/app/components/tasks-view/task-item/task-item.component.scss
+++ b/taskbird-app/src/app/components/tasks-view/task-item/task-item.component.scss
@@ -9,7 +9,7 @@
 
   .title,
   .description {
-    max-width: calc(100% - 4em);
+    max-width: calc(100% - 2em);
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
